--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
 </head>
 <body>
 
+  <content>
   <div class="container">
-    <div class="info">
+    <div class="content-section">
   <h1 class="insights">Get insights that help your business grow.</h1>
   <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer
   experience, and overall efficiency.</p>
-
-
   <div class="analytics">
   <h3>10k+</h3>companies
   <h3>314</h3> templates
   <h3>12m+</h3> queries
-  <img class="image" src="images/image-header-desktop.jpg" alt="Meeting">
-  </div>
   </div>
 </div>
- 
+  <img class="image" src="images/image-header-desktop.jpg" alt="Meeting">
+  </div>
 
+ 
+</content>
 
   <div class="attribution">
   Challenge by  <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
