added container for image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
   <h3>12M+ <span class="numbers">queries</span></h3>
   </div>
   </div>
+  <div class="image-container">
   <img class="image" src="images/image-header-desktop.jpg" alt="Meeting">
+</div>
   </div>
 
  
