changed h3 to ul in analytics section

--- a/index.html
+++ b/index.html
@@ -1,33 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-<link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
+  <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <title>Frontend Mentor | Stats preview card component</title>
 </head>
+
 <body>
 
   <content>
-  <div class="container">
-    <div class="content-section">
-  <h1 class="insights">Get <span>insights</span> that help your business grow.</h1>
-  <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer
-  experience, and overall efficiency.</p>
-  <div class="analytics">
-  <h3>10k+ <span class="numbers">companies</span></h3>
-  <h3>314 <span class="numbers">templates</span></h3>
-  <h3>12M+ <span class="numbers">queries</span></h3>
-  </div>
-  </div>
-  <div class="image-container">
-  <img class="image" src="images/image-header-desktop.jpg" alt="Meeting">
-</div>
-  </div>
+    <div class="container">
+      <div class="content-section">
+        <h1 class="insights">Get <span>insights</span> that help your business grow.</h1>
+        <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer
+          experience, and overall efficiency.</p>
+        <div class="analytics">
+          <ul>
+            <li>10k+ <span class="numbers">companies</span></li>
+            <li>314 <span class="numbers">templates</span></li>
+            <li>12M+ <span class="numbers">queries</span></li>
+          </ul>
+        </div>
+      </div>
+      <div class="image-container">
+        <img src="images/image-header-desktop.jpg" alt="Meeting">
+      </div>
+    </div>
 
- 
-</content>
-  </body>
+
+  </content>
+</body>
+
 </html>
