--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <h1 class="insights">Get <span>insights</span> that help your business grow.</h1>
         <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer
           experience, and overall efficiency.</p>
+
         <div class="analytics">
           <ul>
             <li>10k+ <span class="numbers">companies</span></li>
@@ -27,8 +28,10 @@
           </ul>
         </div>
       </div>
+
       <div class="image-container">
-        <img src="images/image-header-desktop.jpg" alt="Meeting">
+        <img class="desktop" src="images/image-header-desktop.jpg" alt="Meeting">
+        <img class="mobile" src="images/image-header-desktop.jpg" alt="Meeting">
       </div>
     </div>
 
